; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_urlencode.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_add_urlencode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"%%%02x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*, i64, i64 (i8)*)* @strbuf_add_urlencode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strbuf_add_urlencode(%struct.strbuf* %0, i8* %1, i64 %2, i64 (i8)* %3) #0 {
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64 (i8)*, align 8
  %9 = alloca i8, align 1
  store %struct.strbuf* %0, %struct.strbuf** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 (i8)* %3, i64 (i8)** %8, align 8
  %10 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @strbuf_grow(%struct.strbuf* %10, i64 %11)
  br label %13

13:                                               ; preds = %33, %4
  %14 = load i64, i64* %7, align 8
  %15 = add i64 %14, -1
  store i64 %15, i64* %7, align 8
  %16 = icmp ne i64 %14, 0
  br i1 %16, label %17, label %34

17:                                               ; preds = %13
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %6, align 8
  %20 = load i8, i8* %18, align 1
  store i8 %20, i8* %9, align 1
  %21 = load i64 (i8)*, i64 (i8)** %8, align 8
  %22 = load i8, i8* %9, align 1
  %23 = call i64 %21(i8 signext %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %17
  %26 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %27 = load i8, i8* %9, align 1
  %28 = call i32 @strbuf_addch(%struct.strbuf* %26, i8 signext %27)
  br label %33

29:                                               ; preds = %17
  %30 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %31 = load i8, i8* %9, align 1
  %32 = call i32 @strbuf_addf(%struct.strbuf* %30, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8 zeroext %31)
  br label %33

33:                                               ; preds = %29, %25
  br label %13

34:                                               ; preds = %13
  ret void
}

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i64) #1

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
